--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
 certifi==2018.10.15
 chardet==3.0.4
+contexter==0.1.4
+fysom==2.1.5
+hszinc==1.2.2
 httpretty==0.9.6
 idna==2.7
+iso8601==0.1.12
 numpy==1.15.4
 pandas==0.23.4
+parsimonious==0.8.1
+Pint==0.8.1
+pyhaystack==0.92.7
+pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.7
 requests==2.20.1
+semver==2.8.1
+signalslot==0.1.1
 six==1.11.0
 SQLAlchemy==1.2.14
 SQLAlchemy-Utils==0.33.8
 urllib3==1.24.1
+weakrefmethod==1.0.3
