--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ numpy==1.15.4
 pandas==0.23.4
 parsimonious==0.8.1
 Pint==0.8.1
+psycopg2==2.7.6.1
 pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.7
