--- a/requirements.txt
+++ b/requirements.txt
@@ -20,5 +20,5 @@ signalslot==0.1.1
 six==1.11.0
 SQLAlchemy==1.2.14
 SQLAlchemy-Utils==0.33.8
-urllib3==1.24.1
+urllib3>=1.24.2
 weakrefmethod==1.0.3
