--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ requests==2.20.1
 semver==2.8.1
 signalslot==0.1.1
 six==1.11.0
-SQLAlchemy==1.2.14
+SQLAlchemy>=1.3.0
 SQLAlchemy-Utils==0.33.8
 urllib3>=1.24.2
 weakrefmethod==1.0.3
